# poc-report

./: .gitignore  CHANGELOG.md  FAQ.md  POCBench.pdma.json  README.md  doc.html  index.html  latest.json  package.json  pnpm-lock.yaml  rspress.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1724731005126-d2d847a168d2b.mjs
.back_POCBench/: T20240824132058.pdma.json  T20240824132300.pdma.json  T20240824132535.pdma.json  T20240824201238.pdma.json  T20240824201456.pdma.json  T20240824201638.pdma.json  T20240824201846.pdma.json  T20240824201905.pdma.json  T20240824202009.pdma.json  T20240824202043.pdma.json  T20240824202311.pdma.json
.github/workflows/: ci.yml
crates/shared/: Cargo.toml
docs/: Hello.md  _meta.json
scripts/: changelog.mjs  publishRelease.mjs  update.bak.mjs  update.mjs  updater.mjs
src/: App.tsx  DocApp.tsx  docMain.tsx  index.css  main.tsx  mixin.less  vite-env.d.ts
src-tauri/: Cargo.toml  poc-report.db  tauri.conf.json  tauri.conf.offline.json  tauri.conf.resource.json
src-tauri/icons/: icon.icns
src-tauri/mapper/: case.html  category.html  ddl.html  initial_task.html  metric.html  resource.html  server.html  statics.html  task.html
src-tauri/migrations/: V10__data.sql  V11__add_resource_table.sql  V12__server.sql  V1__initial.sql  V2__alter_table.sql  V3__add_server_table.sql  V4__alter_server_table.sql  V5__alter_server_table_drop_column_category_id.sql  V6__add_ddl_table.sql  V7__alter_server_table_add_column_working_directory.sql  V8__update_case.sql  V9__default_sql.sql
src-tauri/resources/docs/: POC最佳实践.md  index.md
src-tauri/src/: main.rs  request.rs  shell.rs
src-tauri/src/command/: case.rs  category.rs  common.rs  ddl.rs  initial_task.rs  metric.rs  mod.rs  resource.rs  server.rs  statics.rs  task.rs
src-tauri/src/entities/: case.rs  category.rs  ddl.rs  initial_task.rs  metric.rs  mod.rs  resource.rs  server.rs  shared_types.rs  statics.rs  task.rs
tauri-plugins/tauri-plugin-sqlite/: Cargo.toml
tauri-plugins/tauri-plugin-sqlite/src/: lib.rs  sqlite.rs
tauri-plugins/tauri-plugin-sqlite/src/sqlite/utils/: mod.rs  sqlite_utils.rs
(+272 files in other folders)
