[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = [ "path-all", "updater", "window-minimize", "window-unminimize", "window-start-dragging", "window-maximize", "window-hide", "window-unmaximize", "window-show", "window-close", "dialog-all"] }
refinery = { version = "0.8.14", features = ["rusqlite"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
shared = { path = "../crates/shared"}
barrel = { version = "0.7", features = ["sqlite3"] }
reqwest = {version = "0.12.4", features = ["stream"] }

# rbatis deps
rbs = { version = "4.5"}
rbatis = { version = "4.5"}
rbdc-sqlite = { version = "4.5" }
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
log = "0.4"
fast_log = "1.6"
ssh2 = "0.9.4"
base64 = "0.22.1"
zip = "2.1.1"
anyhow = "1.0.86"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
enums = ["refinery/enums"]
