[package]
name = "tauri-plugin-sqlite"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples"]

[dependencies]
tauri = { version = "1.6.4" }
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"]}
anyhow = "1.0"
thiserror = "1.0.40"

shared = { path = "../../crates/shared"}